--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,14 @@ body {
   padding: 20px;
   background-color: #f7f7f7;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
 }
 
-
 form {
   display: flex;
-  flex-direction: column; 
-  gap: 10px;              
+  flex-direction: column;
+  gap: 10px;
   background: white;
   padding: 20px;
   border-radius: 8px;
@@ -23,11 +22,11 @@ form {
 
 form div {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
-
-input, select {
+input,
+select {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -55,6 +54,6 @@ input, select {
 }
 
 td {
-    text-align: center;
-    padding: 12px;
+  text-align: center;
+  padding: 12px;
 }
